@@ -1,3 +1,7 @@
+== LATEST
+
+ * Ensure authenticity token is initialized properly.
+
 == 0.0.10 2010-05-05
 
  * Fix padding comment.
